[project]
name = "customweightselector"
description = ""
version = "1.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/gasparuff/comfy-customselector"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "gasparuff"
DisplayName = "comfy-customweightselector"
Icon = ""
